--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
+    "better-npm-run": "0.0.8",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.2.0",
+    "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
-    "eslint-plugin-standard": "^1.3.1",
+    "eslint-plugin-standard": "^1.3.2",
     "mocha": "^2.3.4",
     "supertest": "^1.1.0",
     "supertest-as-promised": "^2.0.2"
