--- a/package.json
+++ b/package.json
@@ -5,12 +5,31 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "node -r dotenv/config bin/lift",
-    "test": "mocha",
-    "test:watch": "npm run test -- --watch"
+    "dev": "better-npm-run dev",
+    "test": "better-npm-run test",
+    "test:watch": "npm run test -- --watch",
+    "spec": "mocha './tests/**/*.spec.js' --opts 'tests/mocha.opts'",
+    "spec:watch": "npm run spec -- --watch"
   },
   "bin": {
     "tenshi": "bin/lift"
+  },
+  "betterScripts": {
+    "dev": {
+      "command": "node bin/lift",
+      "env": {
+        "NODE_ENV": "development",
+        "RUN_TASK": "watch",
+        "DEBUG": "app:*"
+      }
+    },
+    "test": {
+      "command": "mocha './tests/**/*.spec.js' --opts 'tests/mocha.opts'",
+      "env": {
+        "NODE_ENV": "test",
+        "DEBUG": "app:*"
+      }
+    }
   },
   "keywords": [
     "Node",
@@ -54,12 +73,12 @@
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
     "better-npm-run": "0.0.8",
-    "chai": "^3.4.1",
+    "chai": "^3.5.1",
     "chai-as-promised": "^5.2.0",
     "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
     "eslint-plugin-standard": "^1.3.2",
-    "mocha": "^2.3.4",
+    "mocha": "^2.4.5",
     "supertest": "^1.1.0",
     "supertest-as-promised": "^2.0.2"
   },
